fix: size on mobile

--- a/mwp-web/src/static/styles.scss
+++ b/mwp-web/src/static/styles.scss
@@ -5,7 +5,6 @@
   --light: #555;
   --lightest: #aaa;
   --font-sans: system-ui, sans-serif;
-  --page-width: 840px;
   --font-mono: ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
   --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 
